--- a/main.css
+++ b/main.css
@@ -56,6 +56,7 @@ html, body{
 	height: 100%;
 	min-height: 500px;
 	width: 100%;
+	min-width: 900px;
 	font-size: 13px;
 	font-family: Arial, sans-serif;
 	background: white;
@@ -188,6 +189,10 @@ header{
 	background-repeat: no-repeat;
 	background-position: 548px 4px;
 	background-size: 14px auto;
+}
+
+.keyword_search:hover{
+	border: solid 1px #BABABA;
 }
 
 .keyword_search:focus{
